--- a/index.html
+++ b/index.html
@@ -11,7 +11,6 @@
 
   <!-- Favicons -->
   <link href="assets/img/AJ.png" rel="icon">
-  <link href="assets/img/apple-touch-icon.png" rel="apple-touch-icon">
 
   <!-- Google Fonts -->
   <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i,700,700i|Raleway:300,300i,400,400i,500,500i,600,600i,700,700i|Poppins:300,300i,400,400i,500,500i,600,600i,700,700i" rel="stylesheet">
@@ -75,7 +74,7 @@
   <section id="hero" class="d-flex flex-column justify-content-center align-items-center">
     <div class="hero-container" data-aos="fade-in">
       <h1>Aayush Jain</h1>
-      <p>I'm <span class="typed" data-typed-items="Software Developer, Web Developer, Freelancer, Web Designer"></span></p>
+      <p>I'm <span class="typed" data-typed-items="Web Developer, Software Developer, Freelancer, Web Designer"></span></p>
     </div>
   </section><!-- End Hero -->
 
